<resources>
    <string name="app_name">LunaTracker</string>
    <string name="title">🌜 LunaTracker 🌛</string>
    <string name="log_an_event">Log an event:</string>
    <string name="logbook">Logged events</string>

    <string name="log_bottle_dialog_title">Baby bottle</string>
    <string name="log_bottle_dialog_description">Insert the quantity contained in the baby bottle</string>

    <string name="log_weight_dialog_title">Weight</string>
    <string name="log_weight_dialog_description">Insert the weight</string>

    <string name="log_temperature_dialog_title">Temperature</string>
    <string name="log_temperature_dialog_description">Insert the temperature</string>

    <string name="event_bottle_type" translatable="false">🍼</string>
    <string name="event_food_type" translatable="false">🥣</string>
    <string name="event_scale_type" translatable="false">⚖️</string>
    <string name="event_breastfeeding_left_type" translatable="false">🤱 ←</string>
    <string name="event_breastfeeding_both_type" translatable="false">🤱 ↔</string>
    <string name="event_breastfeeding_right_type" translatable="false">🤱 →</string>
    <string name="event_diaperchange_poo_type" translatable="false">🚼 💩</string>
    <string name="event_diaperchange_pee_type" translatable="false">🚼 💧</string>
    <string name="event_medicine_type" translatable="false">💊</string>
    <string name="event_enema_type" translatable="false">🪠</string>
    <string name="event_note_type" translatable="false">📝</string>
    <string name="event_temperature_type" translatable="false">🌡️</string>
    <string name="event_colic_type" translatable="false">💨</string>
    <string name="event_unknown_type" translatable="false">\?</string>

    <string name="event_bottle_desc">Baby bottle</string>
    <string name="event_food_desc">Food</string>
    <string name="event_scale_desc">Weight</string>
    <string name="event_breastfeeding_left_desc">Breastfeeding (left)</string>
    <string name="event_breastfeeding_both_desc">Breastfeeding</string>
    <string name="event_breastfeeding_right_desc">Breastfeeding (right)</string>
    <string name="event_diaperchange_poo_desc">Diaper chg (poo)</string>
    <string name="event_diaperchange_pee_desc">Diaper chg (pee)</string>
    <string name="event_medicine_desc">Medicine</string>
    <string name="event_enema_desc">Enema</string>
    <string name="event_note_desc">Note</string>
    <string name="event_temperature_desc">Temperature</string>
    <string name="event_colic_desc">Gaseous colic</string>
    <string name="event_unknown_desc"></string>

    <string name="overflow_event_scale">⚖️ Weight</string>
    <string name="overflow_event_medicine">💊 Medicine</string>
    <string name="overflow_event_enema">🪠 Enema</string>
    <string name="overflow_event_note">📝 Note</string>
    <string name="overflow_event_temperature">🌡️ Temperature</string>
    <string name="overflow_event_colic">💨 Gaseous colic</string>

    <string name="toast_event_added">Event logged</string>
    <string name="toast_logbook_saved">Logbook saved</string>
    <string name="toast_event_add_error">Unable to log the event</string>
    <string name="toast_integer_error">Invalid value. Insert an integer.</string>

    <!-- Timer strings -->
    <string name="timer_start">Start</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_save">Save</string>
    <string name="log_breastfeeding_timer_title">Breastfeeding Timer</string>
    <string name="log_breastfeeding_timer_description">Tap Start to begin timing the feeding session</string>
    <string name="timer_min_duration_error">Please record at least 30 seconds</string>

    <!-- Duration editing strings -->
    <string name="duration_edit_title">Edit Duration</string>
    <string name="duration_minutes">Minutes</string>
    <string name="duration_seconds">Seconds</string>
    <string name="duration_edit_hint">Minimum duration: 30 seconds</string>
    <string name="duration_edit_error">Duration must be at least 30 seconds</string>
    <string name="duration_edit_max_error">Duration cannot exceed 4 hours</string>

    <string name="now">now</string>
    <string name="hour_ago">hour</string>
    <string name="hours_ago">hours</string>
    <string name="minute_ago">min</string>
    <string name="minutes_ago">mins</string>

    <string name="no_connection">No connection</string>
    <string name="no_connection_explain">Unable to reach WebDAV service</string>
    <string name="no_connection_go_to_settings">Settings</string>
    <string name="no_connection_retry">Retry</string>

    <string name="settings_title">Settings</string>
    <string name="settings_storage">Choose where to save data</string>
    <string name="settings_storage_local">On device</string>
    <string name="settings_storage_local_desc">Most privacy-friendly solution: data doesn\'t leave your device</string>
    <string name="settings_storage_dav">On a WebDAV server</string>
    <string name="settings_storage_dav_desc">You can use any WebDAV service (i.e. Nextcloud, Owncloud, Dropbox, Box…) to save the data. In this way you can syncronize it between more devices, i.e. the dad\'s, the mom\'s, the grandma\'s… You will need the WebDAV url, you can find it in your provider\'s documentation (i.e. in Nextcloud web is in the Files app settings)</string>
    <string name="settings_storage_dav_url">WebDAV url</string>
    <string name="settings_storage_dav_url_hint">https://</string>
    <string name="settings_storage_dav_user">Username</string>
    <string name="settings_storage_dav_pass">Password</string>
    <string name="settings_network_error">Unable to reach server: </string>
    <string name="settings_webdav_error_denied">Wrong WebDAV user or password</string>
    <string name="settings_webdav_error_server_offline">WebDAV server is currently unavailable</string>
    <string name="settings_webdav_error_generic">Error while trying to access WebDAV:</string>
    <string name="settings_webdav_creation_error_generic">Unable to save a file on the WebDAV server:</string>
    <string name="settings_webdav_creation_ok">Successfully connected with WebDAV server</string>
    <string name="settings_json_error">There\'s a save file on the server, but is corrupted or unreadable. Please delete it </string>
    <string name="settings_generic_error">Error: </string>
    <string name="settings_webdav_upload_error">Error while uploading local logbook %1$s to webdav: %2$s</string>

    <string name="trim_logbook_dialog_title">Your logbook is pretty big!</string>
    <string name="trim_logbook_dialog_message_local">Your logbook file is growing a lot. We suggest trimming the oldest events to avoid crashes.</string>
    <string name="trim_logbook_dialog_message_dav">Your logbook file is growing a lot. We suggest trimming the oldest events to avoid crashes. If you want to preserve all the events, please backup the "lunatracker_logbook.json" file on the WebDAV server or rename it to start a new logbook keeping the old one.</string>
    <string name="trim_logbook_dialog_button_ok">Trim it now</string>
    <string name="trim_logbook_dialog_button_cancel">Remind me later</string>

    <string name="log_notes_dialog_description">Notes:</string>
    <string name="log_medicine_dialog_description">Medicine name, quantity, type, notes…:</string>
    <string name="log_notes_dialog_qty_hint">Quantity (or empty)</string>
    <string name="log_notes_dialog_note_hint">Write some notes</string>

    <string name="measurement_unit_liquid_base_metric" translatable="false">ml</string>
    <string name="measurement_unit_weight_base_metric" translatable="false">g</string>
    <string name="measurement_unit_weight_tiny_metric" translatable="false">mg</string>
    <string name="measurement_unit_liquid_base_imperial" translatable="false">fl oz.</string>
    <string name="measurement_unit_weight_base_imperial" translatable="false">oz</string>
    <string name="measurement_unit_weight_tiny_imperial" translatable="false">gr</string>
    <string name="measurement_unit_temperature_base_imperial" translatable="false">°F</string>
    <string name="measurement_unit_temperature_base_metric" translatable="false">°C</string>

    <string name="dialog_event_detail_title">Event detail</string>
    <string name="dialog_event_detail_datetime_icon" translatable="false">🕒 %s1</string>
    <string name="dialog_event_detail_close_button">OK</string>
    <string name="dialog_event_detail_delete_button">Delete</string>

    <string name="dialog_add_logbook_title">Add logbook</string>
    <string name="dialog_add_logbook_logbookname">👶 Logbook name</string>
    <string name="dialog_add_logbook_message">Write a name to identify this logbook. This name will appear on top of the screen and, if you use WebDAV, will be in the save file name as well.</string>
    <string name="dialog_add_logbook_message_intro">Welcome! To use this app you need to create at least one logbook. You would probably want to call it with your child\'s name.</string>

    <string name="default_logbook_name">👶 My first logbook</string>
    <string name="logbook_created">New logbook created: </string>

</resources>