<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:id="@+id/button_medicine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:background="@drawable/button_background"
                style="@style/OverflowMenuText"
                android:text="@string/overflow_event_medicine"/>

            <TextView
                android:id="@+id/button_enema"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@drawable/button_background"
                style="@style/OverflowMenuText"
                android:text="@string/overflow_event_enema"/>

            <TextView
                android:id="@+id/button_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@drawable/button_background"
                style="@style/OverflowMenuText"
                android:text="@string/overflow_event_note"/>

            <TextView
                android:id="@+id/button_temperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@drawable/button_background"
                style="@style/OverflowMenuText"
                android:text="@string/overflow_event_temperature"/>

            <TextView
                android:id="@+id/button_colic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@drawable/button_background"
                style="@style/OverflowMenuText"
                android:text="@string/overflow_event_colic"/>

    </LinearLayout>

</ScrollView>