<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialog_event_detail_type_emoji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="60dp"
        android:text="@string/event_diaperchange_pee_type"/>

    <TextView
        android:id="@+id/dialog_event_detail_type_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/accent"
        android:textSize="24dp"
        android:text="@string/event_diaperchange_pee_desc"/>

    <TextView
        android:id="@+id/dialog_event_detail_type_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="10dp"
        android:drawableTint="@color/accent"
        android:textStyle="bold"
        android:text="@string/dialog_event_detail_datetime_icon"/>

    <TextView
        android:id="@+id/dialog_event_detail_type_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Quantity"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/dialog_event_detail_type_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="Notes"/>

    </ScrollView>
</LinearLayout>